fixed z-indexing on hamburger menu/overlay

--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -51,7 +51,7 @@ $offwhite: #F2F2EB;
     transition: .5s ease-in-out;
     cursor:pointer;
     background: rgba(0,0,0,0);// makes whole container clickable
-    z-index:99;
+    z-index:888;
     @media (min-width: $breakpoint) {
       display: none;
     }
@@ -105,6 +105,7 @@ $offwhite: #F2F2EB;
 #nav-icon3.open span:nth-child(2) {
   transform: rotate(45deg);
      background: #FFF;
+        z-index:100;
 }
 
 #nav-icon3.open span:nth-child(3) {
